--- a/100 numpy tasks/100_Numpy_exercises.ipynb
+++ b/100 numpy tasks/100_Numpy_exercises.ipynb
@@ -442,17 +442,17 @@
     {
      "data": {
       "text/plain": [
-       "array([[[0.04589628, 0.49625357, 0.8763147 ],\n",
-       "        [0.74230216, 0.17512617, 0.85798592],\n",
-       "        [0.72443709, 0.31790206, 0.74555068]],\n",
+       "array([[[0.4771938 , 0.76007645, 0.06621997],\n",
+       "        [0.19061358, 0.82034554, 0.64652963],\n",
+       "        [0.11204952, 0.31619482, 0.22993274]],\n",
        "\n",
-       "       [[0.8373958 , 0.17255108, 0.14813384],\n",
-       "        [0.4496664 , 0.06186535, 0.22040235],\n",
-       "        [0.39578406, 0.25438887, 0.52300232]],\n",
+       "       [[0.0789709 , 0.00904254, 0.92173256],\n",
+       "        [0.34111323, 0.78679642, 0.37486426],\n",
+       "        [0.0488793 , 0.2915991 , 0.43112035]],\n",
        "\n",
-       "       [[0.0211971 , 0.99216565, 0.11094155],\n",
-       "        [0.57138516, 0.27042373, 0.74281017],\n",
-       "        [0.81857201, 0.36641338, 0.39082794]]])"
+       "       [[0.37939677, 0.55199029, 0.87691099],\n",
+       "        [0.80521834, 0.2135198 , 0.56577262],\n",
+       "        [0.11674439, 0.80677167, 0.45426087]]])"
       ]
      },
      "execution_count": 15,
@@ -482,37 +482,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[8.05194006e-01 2.63506083e-01 5.42325752e-01 1.16907800e-01\n",
-      "  5.99538168e-01 2.43190500e-01 9.19952074e-01 3.04844855e-01\n",
-      "  6.26580427e-01 9.38315106e-01]\n",
-      " [8.88377980e-01 2.93975158e-02 5.50672239e-01 7.68821731e-01\n",
-      "  4.50282170e-01 9.07756623e-01 4.80063889e-01 5.14825526e-01\n",
-      "  4.31838291e-01 6.33158280e-01]\n",
-      " [2.60887424e-01 9.21432339e-01 1.52833864e-01 7.53325654e-01\n",
-      "  3.64211082e-01 7.98390401e-02 5.65007822e-01 8.06339444e-01\n",
-      "  3.80127231e-01 2.67329637e-01]\n",
-      " [8.03077109e-02 3.21451354e-01 5.24708162e-01 5.18221750e-01\n",
-      "  9.31852642e-01 4.69984245e-01 2.82945793e-01 4.73768646e-02\n",
-      "  3.92955351e-01 1.93214994e-01]\n",
-      " [4.40603124e-01 6.78927042e-01 3.34311610e-01 1.10765378e-02\n",
-      "  8.86668831e-01 3.71133375e-01 9.84089903e-01 4.06165917e-01\n",
-      "  5.69982201e-01 4.21858674e-01]\n",
-      " [1.33038474e-01 6.39027372e-01 2.49474847e-01 3.34917172e-01\n",
-      "  5.47171567e-01 7.56773972e-01 9.39123411e-01 1.14174078e-01\n",
-      "  2.56267554e-03 8.46656496e-01]\n",
-      " [5.15371827e-01 5.41795592e-01 2.72030891e-02 7.99551545e-01\n",
-      "  4.17298860e-01 9.42609486e-01 3.70436641e-01 3.51368499e-02\n",
-      "  4.81036922e-02 2.19245917e-02]\n",
-      " [4.16188613e-05 2.50456015e-01 4.82842060e-01 9.33895182e-01\n",
-      "  6.90747180e-02 8.94464153e-01 3.71526214e-01 5.61141539e-01\n",
-      "  3.97345517e-01 1.88528837e-01]\n",
-      " [9.62423099e-01 4.73877291e-01 2.13407553e-01 5.90359256e-02\n",
-      "  5.70898125e-01 2.80683891e-01 7.23400772e-01 7.29941068e-01\n",
-      "  9.76868236e-01 4.98089310e-01]\n",
-      " [5.72844234e-01 4.67818922e-01 1.72905743e-01 8.58915955e-01\n",
-      "  1.89667815e-02 2.71087035e-01 5.45988863e-01 3.58763907e-01\n",
-      "  7.09301272e-01 2.07207611e-01]]\n",
-      "min:  4.1618861284176134e-05   max:  0.9840899028486957\n"
+      "[[0.7389631  0.92057724 0.55743693 0.45449887 0.91841169 0.3834394\n",
+      "  0.85805437 0.64754682 0.64444719 0.82430951]\n",
+      " [0.19078089 0.45679335 0.67841918 0.39871152 0.1808516  0.02007967\n",
+      "  0.84234523 0.51108527 0.50840631 0.27882051]\n",
+      " [0.13988142 0.34737253 0.02801336 0.30032767 0.45251337 0.33535649\n",
+      "  0.30566183 0.3234516  0.85390814 0.31993915]\n",
+      " [0.2345383  0.88048111 0.91921501 0.98109487 0.5058537  0.86789023\n",
+      "  0.54596974 0.43999427 0.65433823 0.08161186]\n",
+      " [0.61319239 0.12920044 0.85211899 0.96613792 0.67148571 0.95063404\n",
+      "  0.24583539 0.18454996 0.23523013 0.19686799]\n",
+      " [0.89264772 0.14862457 0.52260265 0.84751431 0.7307784  0.67192513\n",
+      "  0.28074771 0.82872566 0.34101191 0.72043845]\n",
+      " [0.51475786 0.21146987 0.06589252 0.61837805 0.06159005 0.71769269\n",
+      "  0.71932033 0.43170545 0.04483267 0.74898196]\n",
+      " [0.66239413 0.1699358  0.28921884 0.59340905 0.29158224 0.50897356\n",
+      "  0.24109662 0.92241402 0.99579694 0.47734546]\n",
+      " [0.46120503 0.59811173 0.29904211 0.15975747 0.69461468 0.30781887\n",
+      "  0.23951492 0.47123782 0.69227519 0.56490024]\n",
+      " [0.00682869 0.53347107 0.4371623  0.52028558 0.02762923 0.23882817\n",
+      "  0.90679208 0.29361185 0.0275766  0.86362493]]\n",
+      "min:  0.006828692564644578   max:  0.995796944247172\n"
      ]
     }
    ],
@@ -540,17 +530,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.61613611 0.73281306 0.45501352 0.61345979 0.84953931 0.115609\n",
-      " 0.3223673  0.58948862 0.27639005 0.97819291 0.44228994 0.78583014\n",
-      " 0.47874425 0.15798885 0.11014793 0.99796981 0.59738844 0.72946132\n",
-      " 0.45600015 0.39549047 0.23349098 0.49947285 0.51321885 0.64181041\n",
-      " 0.99383055 0.78156974 0.70676232 0.72293797 0.35006706 0.56477269]\n"
+      "[3.68612200e-01 5.14672968e-01 7.79898877e-01 1.33225864e-01\n",
+      " 6.29139954e-01 4.81549634e-01 5.07466399e-01 3.36361358e-02\n",
+      " 1.96165060e-01 8.24508645e-01 9.74653007e-01 6.15363067e-01\n",
+      " 1.16639062e-01 3.87964523e-01 2.26917202e-01 7.99571993e-02\n",
+      " 1.20755495e-01 5.21065435e-01 9.61718087e-02 7.14258014e-01\n",
+      " 1.58483701e-01 2.02779424e-04 3.61550219e-01 2.66716165e-01\n",
+      " 8.96678213e-01 6.00767693e-01 8.35323508e-01 7.97439581e-01\n",
+      " 3.12092458e-01 2.67197761e-01]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.5569418134394301"
+       "0.42730242087315806"
       ]
      },
      "execution_count": 17,
@@ -641,9 +634,7 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "d6760c8c",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -892,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "id": "b203d53f",
    "metadata": {},
    "outputs": [
@@ -930,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
    "id": "b19a2197",
    "metadata": {},
    "outputs": [
@@ -944,7 +935,7 @@
        "       [0, 0, 0, 4, 0]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 23,
    "id": "ee8600c6",
    "metadata": {},
    "outputs": [
@@ -981,7 +972,7 @@
        "       [1, 0, 1, 0, 1, 0, 1, 0]], dtype=int32)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 24,
    "id": "7c9324ec",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 25,
    "id": "de8b0245",
    "metadata": {},
    "outputs": [
@@ -1039,7 +1030,7 @@
        "(1, 5, 3)"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 26,
    "id": "6da26fd3",
    "metadata": {},
    "outputs": [
@@ -1075,7 +1066,7 @@
        "       [1, 0, 1, 0, 1, 0, 1, 0]])"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,11 +1086,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "ee6ced60",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.22411478 0.79835632 0.0422693  0.80288732 0.04439243]\n",
+      " [0.004194   0.86507449 0.43173195 0.51087334 0.14925402]\n",
+      " [0.47666766 0.63985524 0.37854433 0.08888995 0.74971851]\n",
+      " [0.30457465 0.29573054 0.22251367 0.57689403 0.42890544]\n",
+      " [0.80147603 0.57363916 0.83753863 0.96917715 0.3426899 ]]\n",
+      "[[-0.8352356   1.1776042  -1.47264306  1.19348632 -1.465201  ]\n",
+      " [-1.60610512  1.41146569 -0.1074929   0.16991468 -1.09763864]\n",
+      " [ 0.05001643  0.62202391 -0.2939269  -1.30922765  1.00711823]\n",
+      " [-0.55320652 -0.58420701 -0.84084786  0.40133136 -0.11740043]\n",
+      " [ 1.18853946  0.38992234  1.3149466   1.77636785 -0.41960437]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = np.random.rand(5,5)\n",
+    "norm = (w - np.mean(w))/np.std(w)\n",
+    "print(w)\n",
+    "print(norm)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1111,11 +1124,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "e2f9cfc6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "color = np.dtype([(\"R\", np.ubyte), (\"G\", np.ubyte), (\"B\", np.ubyte), (\"A\", np.ubyte)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b3a99762",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color = np.dtype([(\"r\", np.ubyte),\n",
+      "                  (\"g\", np.ubyte),\n",
+      "                  (\"b\", np.ubyte),\n",
+      "                  (\"a\", np.ubyte)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer(23)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1127,11 +1163,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "9fc0d553",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]\n",
+      " [1. 1. 1.]]\n",
+      "[[1. 1.]\n",
+      " [1. 1.]\n",
+      " [1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.ones((5, 3))\n",
+    "b = np.ones((3, 2))\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "1f2d0c89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3., 3.],\n",
+       "       [3., 3.],\n",
+       "       [3., 3.],\n",
+       "       [3., 3.],\n",
+       "       [3., 3.]])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a @ b"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1143,11 +1224,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "0e25eca7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3, -4, -5, -6, -7,  8,  9, 10, 11, 12, 13, 14])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(15)\n",
+    "a[(3 < a)&(a < 8)] *= -1\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1165,12 +1261,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f02eedba",
+   "cell_type": "markdown",
+   "id": "019533fd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1) 0 + 1 + 2 + 3 + 4 - 1 = 9    # sum(iterable, start=0)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "691a30a7",
+   "metadata": {},
+   "source": [
+    "2) 0 + 1 + 2 + 3 + 4 = 10    # numpy.sum(a, axis=None, dtype=None, out=None, ...)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1190,11 +1294,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "86d6cbef",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "z = [1,2,3,4,5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "2d0da99e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z<z>z"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20ae3813",
+   "metadata": {},
+   "source": [
+    " - Z**Z (-)\n",
+    " - 2 << Z >> 2 (-)\n",
+    " - Z <- Z (-)\n",
+    " - 1j*Z (-)\n",
+    " - Z/1/1 (-)\n",
+    " - Z < Z > Z (+)"
+   ]
   },
   {
    "cell_type": "markdown",
