--- a/100 numpy tasks/100_Numpy_exercises.ipynb
+++ b/100 numpy tasks/100_Numpy_exercises.ipynb
@@ -442,17 +442,17 @@
     {
      "data": {
       "text/plain": [
-       "array([[[0.4771938 , 0.76007645, 0.06621997],\n",
-       "        [0.19061358, 0.82034554, 0.64652963],\n",
-       "        [0.11204952, 0.31619482, 0.22993274]],\n",
+       "array([[[0.32431118, 0.00955834, 0.26672443],\n",
+       "        [0.66603508, 0.5162762 , 0.9538407 ],\n",
+       "        [0.49813362, 0.60642478, 0.29011484]],\n",
        "\n",
-       "       [[0.0789709 , 0.00904254, 0.92173256],\n",
-       "        [0.34111323, 0.78679642, 0.37486426],\n",
-       "        [0.0488793 , 0.2915991 , 0.43112035]],\n",
+       "       [[0.34427253, 0.80517599, 0.27627828],\n",
+       "        [0.54224253, 0.19769647, 0.15663912],\n",
+       "        [0.37733503, 0.69749904, 0.61894586]],\n",
        "\n",
-       "       [[0.37939677, 0.55199029, 0.87691099],\n",
-       "        [0.80521834, 0.2135198 , 0.56577262],\n",
-       "        [0.11674439, 0.80677167, 0.45426087]]])"
+       "       [[0.36784624, 0.59087937, 0.33481535],\n",
+       "        [0.04121507, 0.27720432, 0.92983562],\n",
+       "        [0.00755552, 0.50318599, 0.22704325]]])"
       ]
      },
      "execution_count": 15,
@@ -482,27 +482,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.7389631  0.92057724 0.55743693 0.45449887 0.91841169 0.3834394\n",
-      "  0.85805437 0.64754682 0.64444719 0.82430951]\n",
-      " [0.19078089 0.45679335 0.67841918 0.39871152 0.1808516  0.02007967\n",
-      "  0.84234523 0.51108527 0.50840631 0.27882051]\n",
-      " [0.13988142 0.34737253 0.02801336 0.30032767 0.45251337 0.33535649\n",
-      "  0.30566183 0.3234516  0.85390814 0.31993915]\n",
-      " [0.2345383  0.88048111 0.91921501 0.98109487 0.5058537  0.86789023\n",
-      "  0.54596974 0.43999427 0.65433823 0.08161186]\n",
-      " [0.61319239 0.12920044 0.85211899 0.96613792 0.67148571 0.95063404\n",
-      "  0.24583539 0.18454996 0.23523013 0.19686799]\n",
-      " [0.89264772 0.14862457 0.52260265 0.84751431 0.7307784  0.67192513\n",
-      "  0.28074771 0.82872566 0.34101191 0.72043845]\n",
-      " [0.51475786 0.21146987 0.06589252 0.61837805 0.06159005 0.71769269\n",
-      "  0.71932033 0.43170545 0.04483267 0.74898196]\n",
-      " [0.66239413 0.1699358  0.28921884 0.59340905 0.29158224 0.50897356\n",
-      "  0.24109662 0.92241402 0.99579694 0.47734546]\n",
-      " [0.46120503 0.59811173 0.29904211 0.15975747 0.69461468 0.30781887\n",
-      "  0.23951492 0.47123782 0.69227519 0.56490024]\n",
-      " [0.00682869 0.53347107 0.4371623  0.52028558 0.02762923 0.23882817\n",
-      "  0.90679208 0.29361185 0.0275766  0.86362493]]\n",
-      "min:  0.006828692564644578   max:  0.995796944247172\n"
+      "[[0.68184099 0.5736661  0.79190171 0.43570832 0.81154843 0.51677962\n",
+      "  0.00874703 0.44900045 0.96817338 0.53080748]\n",
+      " [0.72078917 0.52272527 0.20186338 0.4574281  0.48559764 0.22424273\n",
+      "  0.71165579 0.82881303 0.48353245 0.69099434]\n",
+      " [0.50592426 0.57791088 0.72572534 0.1901331  0.12918076 0.33546429\n",
+      "  0.63610652 0.22840533 0.63402599 0.02251029]\n",
+      " [0.07101721 0.5949996  0.61511332 0.19495471 0.09529628 0.68678012\n",
+      "  0.11144024 0.07785394 0.1437804  0.32314487]\n",
+      " [0.73073345 0.03867843 0.59935075 0.01435174 0.47905675 0.07880627\n",
+      "  0.51300223 0.38020349 0.94534561 0.60145904]\n",
+      " [0.68294114 0.87402495 0.54393571 0.42795915 0.82695493 0.51249844\n",
+      "  0.94588372 0.11184438 0.38365183 0.0664144 ]\n",
+      " [0.09310606 0.73886042 0.50714457 0.08988088 0.87401401 0.69021332\n",
+      "  0.74911679 0.2764127  0.08217792 0.13399391]\n",
+      " [0.13096537 0.96449571 0.2260861  0.53041341 0.5545882  0.74780103\n",
+      "  0.9855122  0.74960408 0.28540088 0.28148531]\n",
+      " [0.09554437 0.57997907 0.50733073 0.35160785 0.62123863 0.2120042\n",
+      "  0.64898685 0.50407782 0.70980309 0.16746863]\n",
+      " [0.81704281 0.54647412 0.2981318  0.59841604 0.77025384 0.95952641\n",
+      "  0.62353542 0.40324802 0.19362812 0.48160855]]\n",
+      "min:  0.008747027984008393   max:  0.9855122009561537\n"
      ]
     }
    ],
@@ -530,20 +530,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3.68612200e-01 5.14672968e-01 7.79898877e-01 1.33225864e-01\n",
-      " 6.29139954e-01 4.81549634e-01 5.07466399e-01 3.36361358e-02\n",
-      " 1.96165060e-01 8.24508645e-01 9.74653007e-01 6.15363067e-01\n",
-      " 1.16639062e-01 3.87964523e-01 2.26917202e-01 7.99571993e-02\n",
-      " 1.20755495e-01 5.21065435e-01 9.61718087e-02 7.14258014e-01\n",
-      " 1.58483701e-01 2.02779424e-04 3.61550219e-01 2.66716165e-01\n",
-      " 8.96678213e-01 6.00767693e-01 8.35323508e-01 7.97439581e-01\n",
-      " 3.12092458e-01 2.67197761e-01]\n"
+      "[0.99085989 0.6229986  0.53832657 0.91641604 0.40189979 0.15868878\n",
+      " 0.59913061 0.42662543 0.04342945 0.05341144 0.44560869 0.8248348\n",
+      " 0.71632853 0.24334549 0.53056637 0.47424466 0.46659918 0.85849081\n",
+      " 0.41606429 0.37438723 0.23440936 0.55315635 0.73153758 0.17649104\n",
+      " 0.66389735 0.24254615 0.8616828  0.70719325 0.98849504 0.31451776]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.42730242087315806"
+       "0.5192061100693544"
       ]
      },
      "execution_count": 17,
@@ -1094,16 +1091,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.22411478 0.79835632 0.0422693  0.80288732 0.04439243]\n",
-      " [0.004194   0.86507449 0.43173195 0.51087334 0.14925402]\n",
-      " [0.47666766 0.63985524 0.37854433 0.08888995 0.74971851]\n",
-      " [0.30457465 0.29573054 0.22251367 0.57689403 0.42890544]\n",
-      " [0.80147603 0.57363916 0.83753863 0.96917715 0.3426899 ]]\n",
-      "[[-0.8352356   1.1776042  -1.47264306  1.19348632 -1.465201  ]\n",
-      " [-1.60610512  1.41146569 -0.1074929   0.16991468 -1.09763864]\n",
-      " [ 0.05001643  0.62202391 -0.2939269  -1.30922765  1.00711823]\n",
-      " [-0.55320652 -0.58420701 -0.84084786  0.40133136 -0.11740043]\n",
-      " [ 1.18853946  0.38992234  1.3149466   1.77636785 -0.41960437]]\n"
+      "[[0.95189635 0.74524656 0.35778883 0.34742824 0.26354902]\n",
+      " [0.22492741 0.61919307 0.63896607 0.29360024 0.0054317 ]\n",
+      " [0.09083339 0.19013585 0.95896932 0.55883913 0.61782579]\n",
+      " [0.04092137 0.32927918 0.0513542  0.81114017 0.97159543]\n",
+      " [0.3259237  0.27509623 0.48476858 0.83991702 0.85991024]]\n",
+      "[[ 1.56766814  0.8895266  -0.3819539  -0.41595319 -0.69121105]\n",
+      " [-0.81795166  0.47586972  0.54075677 -0.59259503 -1.53824834]\n",
+      " [-1.25799431 -0.93212358  1.59087875  0.27781235  0.47138287]\n",
+      " [-1.42178549 -0.47551109 -1.38754916  1.10576293  1.63231258]\n",
+      " [-0.48652244 -0.65331777  0.0347426   1.20019699  1.26580669]]\n"
      ]
     }
    ],
@@ -1124,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "e2f9cfc6",
    "metadata": {},
    "outputs": [],
@@ -1134,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "b3a99762",
    "metadata": {},
    "outputs": [
@@ -1163,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
    "id": "9fc0d553",
    "metadata": {},
    "outputs": [
@@ -1191,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 31,
    "id": "1f2d0c89",
    "metadata": {},
    "outputs": [
@@ -1205,7 +1202,7 @@
        "       [3., 3.]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 32,
    "id": "0e25eca7",
    "metadata": {},
    "outputs": [
@@ -1234,7 +1231,7 @@
        "array([ 0,  1,  2,  3, -4, -5, -6, -7,  8,  9, 10, 11, 12, 13, 14])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 33,
    "id": "86d6cbef",
    "metadata": {},
    "outputs": [],
@@ -1304,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 34,
    "id": "2d0da99e",
    "metadata": {},
    "outputs": [
@@ -1314,7 +1311,7 @@
        "False"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1351,11 +1348,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
+   "id": "ad3fcbfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-35-3585dcb7ab9b>:1: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  np.array(0) / np.array(0)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "nan"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(0) / np.array(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7070efa7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-36-4764261090d0>:1: RuntimeWarning: divide by zero encountered in floor_divide\n",
+      "  np.array(0) // np.array(0)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array(0) // np.array(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "93684068",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-2.14748365e+09])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([np.nan]).astype(int).astype(float)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1367,11 +1435,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "61fbb78e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "copysign(x1, x2, /, out=None, *, where=True, casting='same_kind', order='K', dtype=None, subok=True[, signature, extobj])\n",
+      "\n",
+      "Change the sign of x1 to that of x2, element-wise.\n",
+      "\n",
+      "If `x2` is a scalar, its sign will be copied to all elements of `x1`.\n",
+      "\n",
+      "Parameters\n",
+      "----------\n",
+      "x1 : array_like\n",
+      "    Values to change the sign of.\n",
+      "x2 : array_like\n",
+      "    The sign of `x2` is copied to `x1`.\n",
+      "    If ``x1.shape != x2.shape``, they must be broadcastable to a common\n",
+      "    shape (which becomes the shape of the output).\n",
+      "out : ndarray, None, or tuple of ndarray and None, optional\n",
+      "    A location into which the result is stored. If provided, it must have\n",
+      "    a shape that the inputs broadcast to. If not provided or None,\n",
+      "    a freshly-allocated array is returned. A tuple (possible only as a\n",
+      "    keyword argument) must have length equal to the number of outputs.\n",
+      "where : array_like, optional\n",
+      "    This condition is broadcast over the input. At locations where the\n",
+      "    condition is True, the `out` array will be set to the ufunc result.\n",
+      "    Elsewhere, the `out` array will retain its original value.\n",
+      "    Note that if an uninitialized `out` array is created via the default\n",
+      "    ``out=None``, locations within it where the condition is False will\n",
+      "    remain uninitialized.\n",
+      "**kwargs\n",
+      "    For other keyword-only arguments, see the\n",
+      "    :ref:`ufunc docs <ufuncs.kwargs>`.\n",
+      "\n",
+      "Returns\n",
+      "-------\n",
+      "out : ndarray or scalar\n",
+      "    The values of `x1` with the sign of `x2`.\n",
+      "    This is a scalar if both `x1` and `x2` are scalars.\n",
+      "\n",
+      "Examples\n",
+      "--------\n",
+      ">>> np.copysign(1.3, -1)\n",
+      "-1.3\n",
+      ">>> 1/np.copysign(0, 1)\n",
+      "inf\n",
+      ">>> 1/np.copysign(0, -1)\n",
+      "-inf\n",
+      "\n",
+      ">>> np.copysign([-1, 0, 1], -1.1)\n",
+      "array([-1., -0., -1.])\n",
+      ">>> np.copysign([-1, 0, 1], np.arange(3)-1)\n",
+      "array([-1.,  0.,  1.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.info(np.copysign)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "8281e2fe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6.6054511 , -6.38745636, -2.03384907, -4.1255613 , -3.93371958,\n",
+       "        1.08930358, -9.86404851,  2.87525162,  6.58317457, -8.33569727])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z = np.random.uniform(-10,+10,10)\n",
+    "Z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "ba1d7713",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  7.  -7.  -3.  -5.  -4.   2. -10.   3.   7.  -9.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.copysign(np.ceil(np.abs(Z)), Z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "70fde773",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  7.  -7.  -3.  -5.  -4.   2. -10.   3.   7.  -9.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.where(Z>0, np.ceil(Z), np.floor(Z)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1383,11 +1570,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "54399cbe",
+   "execution_count": 42,
+   "id": "d6345f48",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7 6 5 3 2 7 4 0 0 0]\n",
+      "[2 2 5 5 8 1 6 5 0 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(10, size=10)\n",
+    "b = np.random.randint(10, size=10)\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e4a6f1df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 2, 5, 6])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.intersect1d(a, b)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1399,11 +1621,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "2ca3289c",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-44-915f24c547f4>:1: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  Z = np.ones(1) / 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "Z = np.ones(1) / 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "5e844d77",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "defaults = np.seterr(all=\"ignore\")\n",
+    "Z = np.ones(1) / 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "c407cce5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Back to normal\n",
+    "_ = np.seterr(**defaults)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "a52def5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Equivalently with a context manager\n",
+    "with np.errstate(all=\"ignore\"):\n",
+    "    np.arange(3) / 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1418,11 +1685,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "5c83ffce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(-1) == np.emath.sqrt(-1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1434,11 +1714,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "c3b683a0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "yesterday = np.datetime64('today') - np.timedelta64(1)\n",
+    "today     = np.datetime64('today')\n",
+    "tomorrow  = np.datetime64('today') + np.timedelta64(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "aaed3998",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yesterday 2022-08-17\n",
+      "today 2022-08-18\n",
+      "tomorrow 2022-08-19\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"yesterday\", yesterday)\n",
+    "print(\"today\", today)\n",
+    "print(\"tomorrow\", tomorrow)"
+   ]
   },
   {
    "cell_type": "markdown",
